Rename .current (stylesheet) to .active

--- a/kitchen-sink/app/asides/features.html
+++ b/kitchen-sink/app/asides/features.html
@@ -13,24 +13,26 @@
                     <strong>Meet the framework</strong>
                 </a>
             </li>
-            <li class="current">
+            <li class="active">
                 <a href="#second-article" data-router="article">
                     <strong>Meet the framework</strong>
+                    <div class="tag right">important</div>
                 </a>
             </li>
 
             <!-- Layout & Navigation -->
             <li>
                 <a href="#layout" data-router="section">
-                    <div class="tag secondary right">5</div>
                     <strong>Layout</strong>
+                    <div class="tag right">5</div>
                 </a>
             </li>
 
             <!-- List -->
             <li>
-                <a href="#list" data-router="section" data-count="22">
+                <a href="#list" data-router="section">
                     <strong>Lists</strong>
+                    <div class="tag right">22</div>
                 </a>
             </li>
 
