--- a/kitchen-sink/app/sections/data-attribute.html
+++ b/kitchen-sink/app/sections/data-attribute.html
@@ -5,7 +5,7 @@
         </nav>
     </header>
 
-    <article id="data-attributes" class="current list scroll indented">
+    <article id="data-attributes" class="active list scroll indented">
         <ul>
             <li data-icon="user">
                 <strong>data-icon</strong>
