--- a/kitchen-sink/app/sections/icon.html
+++ b/kitchen-sink/app/sections/icon.html
@@ -6,7 +6,7 @@
     </header>
 
     <nav class="groupbar">
-        <a href="#icons-default" data-router="article" data-label="Normal" data-count="72" class="current"></a>
+        <a href="#icons-default" data-router="article" data-label="Normal" data-count="72" class="active"></a>
         <a href="#icons-brands" data-router="article" data-label="Brands" data-count="37" ></a>
     </nav>
 
