--- a/kitchen-sink/app/sections/list.html
+++ b/kitchen-sink/app/sections/list.html
@@ -6,7 +6,7 @@
     </header>
 
     <nav class="groupbar">
-        <a href="#list-normal" data-router="article" class="current" data-icon="checkmark" data-label="Normal"></a>
+        <a href="#list-normal" data-router="article" class="active" data-icon="checkmark" data-label="Normal"></a>
         <a href="#list-indented" data-router="article" data-label="Indented"></a>
     </nav>
 
