--- a/kitchen-sink/app/sections/notification.html
+++ b/kitchen-sink/app/sections/notification.html
@@ -8,16 +8,14 @@
     <article class="list scroll indented">
         <div>
             <a href="#" class="button anchor" data-label="Normal" data-action="normal"></a>
-            <a href="#" class="button anchor" data-label="Normal + Animation" data-action="animate"></a>
             <a href="#" class="button anchor" data-label="Loading" data-label="Loading" data-action="loading"></a>
             <a href="#" class="button anchor" data-label="Confirm" data-action="confirm"></a>
             <a href="#" class="button anchor" data-label="Html" data-action="html"></a>
 
-            <a href="#" class="button anchor green" data-label="Success" data-action="success"></a>
-            <a href="#" class="button anchor red" data-label="Error" data-action="error"></a>
-            <a href="#" class="button anchor yellow" data-label="Alert" data-action="alert"></a>
+            <a href="#" class="button anchor accept" data-label="Success" data-action="success"></a>
+            <a href="#" class="button anchor cancel" data-label="Error" data-action="error"></a>
 
-            <a href="#" class="button anchor blue" data-label="Chaining" data-action="chaining"></a>
+            <a href="#" class="button anchor " data-label="Chaining" data-action="chaining"></a>
         </div>
     </article>
 </section>
