Resources async load via data-async attribute

--- a/kitchen-sink/app/sections/list.html
+++ b/kitchen-sink/app/sections/list.html
@@ -10,7 +10,7 @@
         <a href="#list-indented" data-router="article" data-label="Indented"></a>
     </nav>
 
-    <article id="list-normal" class="list scroll">
+    <article id="list-normal" class="active list scroll">
         <ul>
             <li>
                 <strong>&lt;li&gt; + &lt;strong&gt; </strong>
