--- a/kitchen-sink/app/sections/pull.html
+++ b/kitchen-sink/app/sections/pull.html
@@ -5,7 +5,7 @@
         </nav>
     </header>
 
-    <article class="list indented">
+    <article class="active list indented">
         <ul>
              <li class="dark" data-icon="help">
                     <strong>
