--- a/kitchen-sink/app/sections/splash.html
+++ b/kitchen-sink/app/sections/splash.html
@@ -1,5 +1,5 @@
 <section id="splash" data-transition="slide">
-    <article class="indented splash">
+    <article class="active indented splash">
         <img src="http://lungo.tapquo.com/resources/logo_splash.png"/>
         <form class="rounded">
             <input type="text" placeholder="Your username" id="txt-signup-name" value="">
