--- a/kitchen-sink/app/asides/features.html
+++ b/kitchen-sink/app/asides/features.html
@@ -5,7 +5,7 @@
         </nav>
     </header>
 
-    <article class="list scroll">
+    <article class="list scroll active">
         <ul>
             <!-- Basic Layout -->
             <li>
