--- a/kitchen-sink/app/sections/layout.html
+++ b/kitchen-sink/app/sections/layout.html
@@ -9,7 +9,7 @@
     </header>
 
     <nav class="groupbar">
-        <a href="#layout-art1" data-router="article" class="active" data-label="Profile"></a>
+        <a href="#layout-art1" data-router="article" data-label="Profile"></a>
         <a href="#layout-art2" data-router="article" data-label="Inbox" data-count="19"></a>
         <a href="#layout-art3" data-router="article" data-label="Map"></a>
         <a href="#layout-art4" data-router="article" data-label="Settings"></a>
@@ -17,14 +17,14 @@
 
     <footer>
         <nav>
-            <a href="#layout-art1" data-router="article" class="active" data-icon="home"></a>
-            <a href="#layout-art2" data-router="article" data-icon="inbox" data-count="80"></a>
+            <a href="#layout-art1" data-router="article"  data-icon="home"></a>
+            <a href="#layout-art2" data-router="article" class="active" data-icon="inbox" data-count="80"></a>
             <a href="#layout-art3" data-router="article" data-icon="compass"></a>
             <a href="#layout-art4" data-router="article" data-icon="settings"></a>
         </nav>
     </footer>
 
-    <article id="layout-art1"></article>
+    <article id="layout-art1" class="active"></article>
     <article id="layout-art2"></article>
     <article id="layout-art3"></article>
     <article id="layout-art4"></article>
