--- a/kitchen-sink/app/asides/features.html
+++ b/kitchen-sink/app/asides/features.html
@@ -8,21 +8,15 @@
     <article class="list scroll active">
         <ul>
             <!-- Basic Layout -->
-            <li>
-                <a href="#main-article" data-router="article">
-                    <strong>Meet the framework</strong>
-                </a>
-            </li>
             <li class="active">
-                <a href="#second-article" data-router="article">
+                <a href="#main-article" data-router="article" data-title="Lungo Framework">
                     <strong>Meet the framework</strong>
-                    <div class="tag right">important</div>
                 </a>
             </li>
 
             <!-- Layout & Navigation -->
             <li>
-                <a href="#layout" data-router="section">
+                <a href="#layout" data-router="section" data-async="app/sections/layout.html">
                     <strong>Layout</strong>
                     <div class="tag right">5</div>
                 </a>
@@ -30,7 +24,7 @@
 
             <!-- List -->
             <li>
-                <a href="#list" data-router="section">
+                <a href="#list" data-router="section" data-async="app/sections/list.html">
                     <strong>Lists</strong>
                     <div class="tag right">22</div>
                 </a>
@@ -38,7 +32,7 @@
 
             <!-- Forms -->
             <li>
-                <a href="#form" data-router="section">
+                <a href="#form" data-router="section" data-async="app/sections/form.html">
                     <div class="tag right">8</div>
                     <strong>Form Elements</strong>
                 </a>
@@ -46,7 +40,7 @@
 
             <!-- Asides -->
             <li>
-                <a href="#aside" data-router="section">
+                <a href="#aside" data-router="section" data-async="app/sections/aside.html">
                     <div class="tag right">8</div>
                     <strong>Asides</strong>
                 </a>
@@ -54,7 +48,7 @@
 
             <!-- Data-Attributes -->
             <li>
-                <a href="#data" data-router="section">
+                <a href="#data" data-router="section" data-async="app/sections/data-attribute.html">
                     <div class="tag right">9</div>
                     <strong>Data-attributes</strong>
                 </a>
@@ -62,7 +56,7 @@
 
             <!-- Icons -->
             <li>
-                <a href="#icon" data-router="section">
+                <a href="#icon" data-router="section" data-async="app/sections/icon.html">
                     <div class="tag right">109</div>
                     <strong>Icons</strong>
                 </a>
@@ -70,7 +64,7 @@
 
             <!-- Scrolls -->
             <li>
-                <a href="#scroll" data-router="section">
+                <a href="#scroll" data-router="section" data-async="app/sections/scroll.html">
                     <div class="tag right">2</div>
                     <strong>Scrolls</strong>
                 </a>
@@ -78,7 +72,7 @@
 
             <!-- Touch Events -->
             <li>
-                <a href="#touchevents" data-router="section">
+                <a href="#touchevents" data-router="section" data-async="app/sections/touchevents.html">
                     <div class="tag right">19</div>
                     <strong>Touch Events</strong>
                 </a>
@@ -86,7 +80,7 @@
 
             <!-- Layout Events -->
             <li>
-                <a href="#layoutevents" data-router="section">
+                <a href="#layoutevents" data-router="section" data-async="app/sections/layoutevents.html">
                     <div class="tag right">2</div>
                     <strong>Layout Events</strong>
                 </a>
@@ -94,7 +88,7 @@
 
             <!-- Notifications -->
             <li>
-                <a href="#notification" data-router="section">
+                <a href="#notification" data-router="section" data-async="app/sections/notification.html">
                     <div class="tag right">8</div>
                     <strong>Notifications</strong>
                 </a>
@@ -102,7 +96,7 @@
 
             <!-- Pull & Refresh -->
             <li>
-                <a href="#pull" data-router="section">
+                <a href="#pull" data-router="section" >
                     <div class="tag right">1</div>
                     <strong>Pull & Refresh</strong>
                 </a>
@@ -110,7 +104,7 @@
 
             <!-- Carousel -->
             <li>
-                <a href="#carousel" data-router="section">
+                <a href="#carousel" data-router="section" >
                     <div class="tag right">1</div>
                     <strong>Carousel</strong>
                 </a>
@@ -118,7 +112,7 @@
 
             <!-- Environment -->
             <li>
-                <a href="#environment" data-router="section">
+                <a href="#environment" data-router="article" data-title="Environment">
                     <div class="tag right">1</div>
                     <strong>Environment</strong>
                 </a>
@@ -126,7 +120,7 @@
 
             <!-- Buttons & Colours -->
             <li>
-                <a href="#color" data-router="section" data-title="Colours">
+                <a href="#color" data-router="section" data-async="app/sections/color.html">
                     <div class="tag right">14</div>
                     <strong>Buttons & Colours</strong>
                 </a>
@@ -134,7 +128,7 @@
 
             <!-- Grid System -->
             <li>
-                <a href="#grid" data-router="section">
+                <a href="#grid" data-router="section" data-async="app/sections/grid.html">
                     <strong>Grid System</strong>
                 </a>
             </li>
