--- a/kitchen-sink/app/sections/aside.html
+++ b/kitchen-sink/app/sections/aside.html
@@ -4,10 +4,10 @@
             <a href="#back" data-router="section" data-label="back"></a>
         </nav>
     </header>
-    <article id="aside-example" class="indented">
+    <article id="aside-example" class="active indented">
         <div>
-            <a href="#left" data-router="aside" data-icon="left" class="button anchor blue">Example of normal aside</a>
-            <a href="#right" data-router="aside" data-icon="right" class="button anchor red">Example of mini right aside</a>
+            <a href="#left" data-router="aside" data-async="app/asides/left.html" data-icon="left" class="button anchor blue">Example of normal aside</a>
+            <a href="#right" data-router="aside" data-async="app/asides/right.html" data-icon="right" class="button anchor red">Example of mini right aside</a>
         </div>
     </article>
 </section>
