--- a/kitchen-sink/app/sections/carousel.html
+++ b/kitchen-sink/app/sections/carousel.html
@@ -14,7 +14,7 @@
             <a href="#" data-action="carousel" data-direction="right" data-icon="right"></a>
         </nav>
     </header>
-    <article id="carousel-article">
+    <article id="carousel-article" class="active">
         <div data-control="carousel" class="carousel">
             <div>
                 <div align="center">
