--- a/kitchen-sink/app/sections/form.html
+++ b/kitchen-sink/app/sections/form.html
@@ -5,7 +5,7 @@
         </nav>
     </header>
 
-    <article class="scroll">
+    <article class="active scroll">
         <form class="margined">
             <input type="search" placeholder="type your search" />
             <a href="#" class="button theme" data-icon="search"></a>
@@ -40,11 +40,11 @@
                 <input type="range" min="0" max="1" class="checkbox left" value="0">
                 <input type="range" min="0" max="1" class="checkbox right active" value="1">
             </div>
-                <div class="four columns left">
-                    <a href="#" class="button anchor theme" data-label="Accept" data-icon="check"></a>
+                <div class="four columns s">
+                    <a href="#" class="button anchosr accept" data-label="Accept" data-icon="check"></a>
                 </div>
-                <div class="four columns right">
-                    <a href="#" class="button anchor red" data-label="Cancel" data-icon="close"></a>
+                <div class="four columns s">
+                    <a href="#" class="button anchsor cancel" data-label="Cancel" data-icon="close"></a>
                 </div>
         </form>
 
