--- a/kitchen-sink/app/sections/icon.html
+++ b/kitchen-sink/app/sections/icon.html
@@ -10,7 +10,7 @@
         <a href="#icons-brands" data-router="article" data-label="Brands" data-count="37" ></a>
     </nav>
 
-    <article id="icons-default" class="list scroll indented">
+    <article id="icons-default" class="active list scroll indented">
         <ul>
             <li data-icon="home">
                 <a href="#">
