--- a/kitchen-sink/app/sections/layout.html
+++ b/kitchen-sink/app/sections/layout.html
@@ -4,12 +4,12 @@
             <a href="#back" data-router="section" data-label="back"></a>
         </nav>
         <nav class="right">
-            <a href="#splash" class="button" data-router="section" data-icon="user" data-label="Splash"></a>
+            <a href="#splash" data-router="section" data-async="app/sections/splash.html" class="button" data-icon="user" data-label="Splash"></a>
         </nav>
     </header>
 
     <nav class="groupbar">
-        <a href="#layout-art1" data-router="article" data-label="Profile"></a>
+        <a href="#layout-art1" data-router="article" data-label="Profile" class="active"></a>
         <a href="#layout-art2" data-router="article" data-label="Inbox" data-count="19"></a>
         <a href="#layout-art3" data-router="article" data-label="Map"></a>
         <a href="#layout-art4" data-router="article" data-label="Settings"></a>
@@ -17,8 +17,8 @@
 
     <footer>
         <nav>
-            <a href="#layout-art1" data-router="article"  data-icon="home"></a>
-            <a href="#layout-art2" data-router="article" class="active" data-icon="inbox" data-count="80"></a>
+            <a href="#layout-art1" data-router="article" data-icon="home" class="active"></a>
+            <a href="#layout-art2" data-router="article" data-icon="inbox" data-count="80"></a>
             <a href="#layout-art3" data-router="article" data-icon="compass"></a>
             <a href="#layout-art4" data-router="article" data-icon="settings"></a>
         </nav>
