--- a/kitchen-sink/app/sections/notification.html
+++ b/kitchen-sink/app/sections/notification.html
@@ -5,7 +5,7 @@
         </nav>
     </header>
 
-    <article class="list scroll indented">
+    <article class="active list scroll indented">
         <div>
             <a href="#" class="button anchor" data-label="Normal" data-action="normal"></a>
             <a href="#" class="button anchor" data-label="Loading" data-label="Loading" data-action="loading"></a>
