--- a/kitchen-sink/app/sections/scroll.html
+++ b/kitchen-sink/app/sections/scroll.html
@@ -5,7 +5,7 @@
         </nav>
     </header>
 
-    <article>
+    <article class="active">
         <h1 class="one row ">.scroll stylesheet class</h1>
         <ul class=" four row scroll anchor">
             <img src="http://lorempixel.com/256/128/food/">
