--- a/kitchen-sink/app/sections/touchevents.html
+++ b/kitchen-sink/app/sections/touchevents.html
@@ -5,7 +5,7 @@
         </nav>
     </header>
 
-    <article>
+    <article class="active">
         <div class="two rows" id="touchevents-console">Test them...</div>
         <div class="eight rows list scroll">
         <ul>
