--- a/kitchen-sink/app/sections/color.html
+++ b/kitchen-sink/app/sections/color.html
@@ -4,7 +4,7 @@
             <a href="#back" data-router="section" data-label="back"></a>
         </nav>
     </header>
-    <article class="scroll indented">
+    <article class="active scroll indented">
         <div>
             <h1>Sizes</h1>
             <p class="margin bottom">
