--- a/kitchen-sink/app/sections/grid.html
+++ b/kitchen-sink/app/sections/grid.html
@@ -5,7 +5,7 @@
         </nav>
     </header>
 
-    <article id="grid-basic" style="font-size:0.7em;">
+    <article id="grid-basic" class="active"  style="font-size:0.7em;">
         <div class="four rows">class="four rows"</div>
         <div class="one row blue">class="one row blue"</div>
         <div class="one row">class="one row"</div>
