New handler for Carousel

--- a/kitchen-sink/app/asides/features.html
+++ b/kitchen-sink/app/asides/features.html
@@ -88,7 +88,7 @@
 
             <!-- Notifications -->
             <li>
-                <a href="#notification" data-router="section" data-async="app/sections/notification.html">
+                <a href="#notification" data-router="section">
                     <div class="tag right">8</div>
                     <strong>Notifications</strong>
                 </a>
