--- a/kitchen-sink/app/sections/carousel.html
+++ b/kitchen-sink/app/sections/carousel.html
@@ -4,46 +4,41 @@
             <a href="#back" data-router="section" data-label="back"></a>
         </nav>
 
-        <div class="centered title with-subtitle">
-            Carousel
-            <small class="subtitle">Photo Nº<span>1</span></small>
-        </div>
+        <div class="centered title">Photo Nº<span>1</span></div>
 
         <nav class="right box">
             <a href="#" data-action="carousel" data-direction="left" data-icon="left"></a>
             <a href="#" data-action="carousel" data-direction="right" data-icon="right"></a>
         </nav>
     </header>
-    <article id="carousel-article" class="active">
-        <div data-control="carousel" class="carousel">
-            <div>
-                <div align="center">
-                    <img src="http://lorempixel.com/320/418/food/">
-                </div>
-                <div align="center">
-                    <img src="http://lorempixel.com/320/418/sports/">
-                </div>
-                <div align="center">
-                    <img src="http://lorempixel.com/320/418/people/">
-                </div>
-                <div align="center">
-                    <img src="http://lorempixel.com/320/418/abstract/">
-                </div>
-                <div align="center">
-                    <img src="http://lorempixel.com/320/418/city/">
-                </div>
-                <div align="center">
-                    <img src="http://lorempixel.com/320/418/transport/">
-                </div>
-                <div align="center">
-                    <img src="http://lorempixel.com/320/418/nature/">
-                </div>
-                <div align="center">
-                    <img src="http://lorempixel.com/320/418/fashion/">
-                </div>
-                <div align="center">
-                    <img src="http://lorempixel.com/320/418/technics/">
-                </div>
+    <article id="carousel-article" class="active block" data-control="carousel">
+        <div>
+            <div align="center">
+                <img src="http://lorempixel.com/320/418/food/" />
+            </div>
+            <div align="center">
+                <img src="http://lorempixel.com/320/418/sports/">
+            </div>
+            <div align="center">
+                <img src="http://lorempixel.com/320/418/people/">
+            </div>
+            <div align="center">
+                <img src="http://lorempixel.com/320/418/abstract/">
+            </div>
+            <div align="center">
+                <img src="http://lorempixel.com/320/418/city/">
+            </div>
+            <div align="center">
+                <img src="http://lorempixel.com/320/418/transport/">
+            </div>
+            <div align="center">
+                <img src="http://lorempixel.com/320/418/nature/">
+            </div>
+            <div align="center">
+                <img src="http://lorempixel.com/320/418/fashion/">
+            </div>
+            <div align="center">
+                <img src="http://lorempixel.com/320/418/technics/">
             </div>
         </div>
     </article>
