--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -223,9 +223,9 @@
             name: 'Kitchen Sink',
             version: '2.1',
             resources: ['app/sections/pull.html',
+                        'app/sections/notification.html',
                         'app/sections/carousel.html',
                         'app/asides/features.html']
-
         });
     </script>
     <script src="app/app.js"></script>
