New namespace for Resources loader

--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -188,6 +188,7 @@
     <script src="../src/Lungo.Events.js"></script>
     <script src="../src/Lungo.Notification.js"></script>
     <script src="../src/Lungo.Fallback.js"></script>
+    <script src="../src/Lungo.Resource.js"></script>
 
     <script src="../src/router/Lungo.Router.js"></script>
     <script src="../src/router/Lungo.Router.History.js" ></script>
@@ -208,7 +209,6 @@
 
     <script src="../src/attributes/Lungo.Attributes.Data.js"></script>
 
-    <script src="../src/boot/Lungo.Boot.Resources.js" ></script>
     <script src="../src/boot/Lungo.Boot.Layout.js"></script>
     <script src="../src/boot/Lungo.Boot.Events.js"></script>
     <script src="../src/boot/Lungo.Boot.Data.js"></script>
