Now Notification.html has a label for button

--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -211,9 +211,7 @@
 
     <script src="../src/boot/Lungo.Boot.Layout.js"></script>
     <script src="../src/boot/Lungo.Boot.Events.js"></script>
-    <script src="../src/boot/Lungo.Boot.Data.js"></script>
-    <script src="../src/boot/Lungo.Boot.Section.js"></script>
-    <script src="../src/boot/Lungo.Boot.Article.js"></script>
+    <script src="../src/boot/Lungo.Boot.Data.js"></script> cdd
 
     <script src="../src/Lungo.Scroll.js"></script>
 
