Re-folder kitchen-sink (example)

--- a/example/index.html
+++ b/example/index.html
@@ -175,7 +175,7 @@
     </section>
 
     <!-- Lungo dependencies -->
-    <script src="../src/lib/quo.debug.js"></script>
+    <script src="../components/QuoJS/quo.js"></script>
     <!--
     <script src="../package/lungo.js"></script>
     -->
