Fix GruntJS for icons

--- a/example/index.html
+++ b/example/index.html
@@ -46,6 +46,10 @@
 
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="../packages/lungo/lungo.css">
+    <link rel="stylesheet" href="../packages/lungo/lungo.icon.css">
+    <link rel="stylesheet" href="../packages/lungo/lungo.icon.brand.css">
+    <link rel="stylesheet" href="../packages/lungo/lungo.css">
+
     <link rel="stylesheet" href="../packages/lungo/theme.lungo.css">
 
     <!-- App Stylesheet -->
