Touch events in sync mode

--- a/example/app/asides/features.html
+++ b/example/app/asides/features.html
@@ -72,7 +72,7 @@
 
             <!-- Touch Events -->
             <li>
-                <a href="#touchevents" data-router="section" data-async="app/sections/touchevents.html">
+                <a href="#touchevents" data-router="section">
                     <div class="tag right">19</div>
                     <strong>Touch Events</strong>
                 </a>
