--- a/example/index.html
+++ b/example/index.html
@@ -174,6 +174,7 @@
             resources: ['app/sections/pull.html',
                         'app/sections/notification.html',
                         'app/sections/carousel.html',
+                        'app/sections/touchevents.html',
                         'app/asides/features.html']
         });
     </script>
