--- a/example/app/sections/form.html
+++ b/example/app/sections/form.html
@@ -4,7 +4,7 @@
             <a href="#back" data-router="section" data-label="back"></a>
         </nav>
         <nav class="right">
-            <a href="#" data-router="article" class="button" data-icon="share" data-label="Share"></a>
+            <a href="#" class="button" data-icon="share" data-label="Share"></a>
         </nav>
     </header>
 
@@ -31,9 +31,7 @@
                 <textarea></textarea>
             </fieldset>
 
-
             <a href="#form-extras" data-router="article" class="button anchor accept" data-label="View Extra Elements"></a>
-
         </div>
     </article>
 
