Optimized data-article reference

--- a/example/index.html
+++ b/example/index.html
@@ -65,9 +65,8 @@
             <div class="left">
                 <div class="centered title">Lungo Framework</div>
             </div>
-
             <nav class="right box">
-                <a href="#" class="buttons" data-icon="share" data-article="main-article"></a>
+                <a href="#" data-icon="share"></a>
             </nav>
         </header>
 
