Refolder example (kitchen-sink)

--- a/example/index.html
+++ b/example/index.html
@@ -45,12 +45,12 @@
              and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image">
 
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="../packages/lungo/lungo.css">
-    <link rel="stylesheet" href="../packages/lungo/lungo.icon.css">
-    <link rel="stylesheet" href="../packages/lungo/lungo.icon.brand.css">
-    <link rel="stylesheet" href="../packages/lungo/lungo.css">
+    <link rel="stylesheet" href="components/lungo/lungo.css">
+    <link rel="stylesheet" href="components/lungo/lungo.icon.css">
+    <link rel="stylesheet" href="components/lungo/lungo.icon.brand.css">
+    <link rel="stylesheet" href="components/lungo/lungo.css">
 
-    <link rel="stylesheet" href="../packages/lungo/theme.lungo.css">
+    <link rel="stylesheet" href="components/lungo/theme.lungo.css">
 
     <!-- App Stylesheet -->
     <link rel="stylesheet" href="stylesheets/app.css">
@@ -162,8 +162,8 @@
     </section>
 
     <!-- Lungo dependencies -->
-    <script src="../components/QuoJS/quo.js"></script>
-    <script src="../packages/lungo/lungo.js"></script>
+    <script src="components/quojs/quo.js"></script>
+    <script src="components/lungo/lungo.js"></script>
 
     <!-- LungoJS - Sandbox App -->
     <script>
