--- a/example/app/asides/features.html
+++ b/example/app/asides/features.html
@@ -132,6 +132,13 @@
                     <strong>Grid System</strong>
                 </a>
             </li>
+
+            <!-- Theme roller -->
+            <li>
+                <a href="#themeroller" data-router="section" data-async="app/sections/themeroller.html">
+                    <strong>Theme roller</strong>
+                </a>
+            </li>
         </ul>
     </article>
 </aside>
