--- a/example/index.html
+++ b/example/index.html
@@ -50,7 +50,7 @@
     <link rel="stylesheet" href="components/lungo/lungo.icon.brand.css">
     <link rel="stylesheet" href="components/lungo/lungo.css">
 
-    <link rel="stylesheet" href="components/lungo/theme.lungo.css">
+    <link rel="stylesheet" href="components/lungo/theme.lungo.css" id="theme-stylesheet">
 
     <!-- App Stylesheet -->
     <link rel="stylesheet" href="stylesheets/app.css">
@@ -178,10 +178,11 @@
         });
     </script>
     <script src="app/app.js"></script>
-        <script src="app/events.notification.js"></script>
-        <script src="app/events.touch.js"></script>
-        <script src="app/events.pull.js"></script>
-        <script src="app/events.carousel.js"></script>
-        <script src="app/events.trigger.js"></script>
+    <script src="app/events.notification.js"></script>
+    <script src="app/events.touch.js"></script>
+    <script src="app/events.pull.js"></script>
+    <script src="app/events.carousel.js"></script>
+    <script src="app/events.trigger.js"></script>
+    <script src="app/events.themeroller.js"></script>
 </body>
 </html>
