--- a/example/app/asides/features.html
+++ b/example/app/asides/features.html
@@ -136,6 +136,7 @@
             <!-- Theme roller -->
             <li>
                 <a href="#themeroller" data-router="section" data-async="app/sections/themeroller.html">
+                    <div class="tag right">4</div>
                     <strong>Theme roller</strong>
                 </a>
             </li>
