--- a/example/app/sections/themeroller.html
+++ b/example/app/sections/themeroller.html
@@ -7,17 +7,21 @@
 
     <article class="active list indented">
         <ul>
-             <li class="dark" data-icon="help" data-theme="theme.lungo.css">
-                <strong>First theme</strong>
+             <li class="theme" data-icon="eye" data-theme="theme.lungo.css">
+                <strong>Default theme</strong>
                 <small>This element has an associated event</small>
             </li>
-             <li class="dark" data-icon="help" data-theme="theme2.lungo.css">
-                <strong>Second theme</strong>
-                <small>This element has an associated event</small>
+            <li class="cancel" data-icon="eye" data-theme="theme.red.css">
+                <strong>Theme: Red</strong>
+                <small>#EE6557</small>
             </li>
-             <li class="dark" data-icon="help" data-theme="theme3.lungo.css">
-                <strong>Third theme</strong>
-                <small>This element has an associated event</small>
+            <li class="accept" data-icon="eye" data-theme="theme.green.css">
+                <strong>Theme: Green</strong>
+                <small>#3FB58E</small>
+            </li>
+            <li class="secondary" data-icon="eye" data-theme="theme.grey.css">
+                <strong>Theme: Grey</strong>
+                <small>#BFBFBF</small>
             </li>
         </ul>
 
