--- a/example/app/sections/list.html
+++ b/example/app/sections/list.html
@@ -276,39 +276,30 @@
         <ul>
             <li class="feature">
                 <div class="right  ">15:49</div>
-                <strong class="text bold">Enrique Amodeo Rubio</strong>
-                <div class="text small">[madridJS] [JOB] Front Developer Position</div>
+                <strong class="text bold">Javi Jimenez Villar</strong>
+                <div class="text small">[JavaScript] [JOB] FrontEnd Developer</div>
                 <small>
                     <div class="right tag ">theme</div>
-                    Hola a todos, nos llega esta oportunida muy inteeresante
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam delectus unde.
                 </small>
             </li>
             <li class="feature">
                 <div class="right ">15:49</div>
-                <strong class="text normal">Enrique Amodeo Rubio</strong>
-                <small class="text small">[madridJS] [JOB] Front Developer Position</small>
+                <strong class="text normal">Ignacio Olalde</strong>
+                <small class="text small">[Python] [JOB] BackEnd Developer</small>
                 <small>
                     <div class="right tag cancel">important</div>
-                    Hola a todos, nos llega esta oportunida muy inteeresante
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam delectus unde.
                 </small>
             </li>
             <li class="feature">
                 <div class="right tag accept">sended</div>
                 <strong class="text bold">Open Source Project</strong>
-                <p class="text thin">Each new line of code in Lungo is welcome, we hope that Developers and restless minds help us to improve day by day this humble project.</p>
+                <p class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos officia dolore in perferendis eum ducimus molestias...</p>
             </li>
             <li class="feature">
-                <strong>Powerfull JavaScript API</strong>
-                Each new line of code in Lungo is welcome, we hope that Developers and restless minds help us to improve day by day this humble project.
-            </li>
-            <li class="feature">
-                <strong>Multi-Device full support</strong>
-                Is known that create apps for each platform is expensive, this situation is increased by the arrival of tablets and SmartTVs. Lungo will suit all of them creating a unique and amazing UX.
-            </li>
-
-            <li>
-                <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Flungo.tapquo.com%2F&text=@lungojs a framework for developers who want to design, build and share cross device apps" data-icon="brand twitter" target="_blank" class="button anchor theme" data-label="Tweet me"></a>
-                <button data-icon="brand twitter" class="anchor theme" data-label="Tweet me"></button>
+                <strong>Lorem ipsum dolor sit amet</strong>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ut corporis sint facilis cupiditate adipisci ab blanditiis porro dolorem nam velit saepe sed unde minima in nesciunt nostrum laboriosam fugit.
             </li>
         </ul>
     </article>
